# Alpaca-jp

./: .gitignore  10_generate_instruction.ipynb  11_generate_instruction_di.ipynb  12_clean_instructions.ipynb  README.md  data_cleaning.py  data_cleaning_math.py  generate_instruction_di.py  generate_instruction_ms.py  math_code_check.py  prompt_en_for_jp.txt  prompt_en_for_jp_math.txt  prompt_en_for_jp_python.txt  prompt_jp.txt  pyproject.toml  utils_di.py  utils_ms.py
seed_tasks/: seed_tasks_amenokaku_mit_python_450.jsonl  seed_tasks_japanese.jsonl  seed_tasks_jp_cleaned.jsonl  seed_tasks_jp_math.jsonl  seed_tasks_jp_math_143.jsonl  seed_tasks_jp_python_97.jsonl  seed_tasks_jp_python_cleaned.jsonl  seed_tasks_jp_row.jsonl
