[tool.poetry]
name = "26-stanford-alpaca"
version = "0.1.0"
description = ""
authors = ["Hajime Yagihara <eitiwai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
rouge-score = "^0.1.2"
fire = "^0.6.0"
openai = "^1.23.6"
transformers = "^4.40.1"
torch = "^2.3.0"
sentencepiece = "^0.2.0"
tokenizers = "^0.19.1"
wandb = "^0.16.6"
ipykernel = "^6.29.4"
notebook = "^7.1.3"
mistralai = "^0.1.8"
deepl = "^1.18.0"
datasets = "^2.19.0"
huggingface-hub = "^0.22.2"
ipywidgets = "^8.1.2"
sympy = "^1.12"
scikit-learn = "^1.4.2"
statsmodels = "^0.14.2"
geometry = "^0.0.23"
pulp = "^2.8.0"
inflect = "^7.2.1"
translate = "^3.6.1"
shapely = "^2.0.4"
py-sudoku = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
